Fix issue 2: On narrow screens, menu bar becomes vertical and covers content Switch from navbar-fixed-top to navbar-static-top and remove body padding. https://github.com/baumanj/ccsubs/issues/2

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -18,7 +18,8 @@ html {
 }
 
 body {
-  padding-top: 60px;
+  /* Changed from 60 when changing header from navbar-static-top to navbar-fixed-top */
+  padding-top: 0px;
 }
 
 section {
